--- a/PYTHON-FRONT/templates/administrar_productos.html
+++ b/PYTHON-FRONT/templates/administrar_productos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrar Productos - Rocco Couture</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
-    <link rel="shortcut icon" href="./static/img/LogoRC.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="./img/LogoRC.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     <footer>
       
     </footer>
-    <script src="static/js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 
 </body>
 
