--- a/PYTHON-FRONT/templates/catalogo.html
+++ b/PYTHON-FRONT/templates/catalogo.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocco Couture</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
-    <link rel="shortcut icon" href="./static/img/LogoRC.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="/PYTHON-FRONT/" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="\static\img\logoRC.png" alt="Logo" id="logo">
+        <img src="./img/logoRC.png" alt="Logo" id="logo">
         <h1>Rocco Couture</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="./index.html">Inicio</a></li>
                 <li><a href="catalogo.html" class="selected">Catálogo</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
