--- a/PYTHON-FRONT/templates/tabla_productos.html
+++ b/PYTHON-FRONT/templates/tabla_productos.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Panel de Administración</title>
-    <link rel="stylesheet" href="./static/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link
       rel="shortcut icon"
-      href="./static/img/LogoRC.ico"
+      href="/static/img/LogoRC.ico"
       type="image/x-icon"
     />
     <link
@@ -71,8 +71,8 @@
       <p>&copy; 2024 Rocco Couture. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="static/js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="static/js/tabla_producto.js"></script>
+    <script src="/js/tabla_producto.js"></script>
   </body>
 </html>
