--- a/PYTHON-FRONT/templates/agregar_producto.html
+++ b/PYTHON-FRONT/templates/agregar_producto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/ingresar_producto.css">
+    <link rel="stylesheet" href="/css/ingresar_producto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Registrar Producto</title>
     
@@ -49,7 +49,7 @@
     </main>
 
     <footer></footer>
-    <script src="static/js/ingresar_producto.js"></script>
+    <script src="/js/ingresar_producto.js"></script>
  
 </body>
 
