--- a/PYTHON-FRONT/templates/catalogo.html
+++ b/PYTHON-FRONT/templates/catalogo.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocco Couture</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="shortcut icon" href="/PYTHON-FRONT/" type="image/x-icon">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="/img/LogoRC.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="./img/logoRC.png" alt="Logo" id="logo">
+        <img src="/img/logoRC.png" alt="Logo" id="logo">
         <h1>Rocco Couture</h1>
         <nav>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="catalogo.html" class="selected">Catálogo</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -25,7 +25,7 @@
 
     <main>
         <div class="card">
-            <img src="static/img/Hombre modelo (1).jpg" alt="Producto 1">
+            <img src="/img/Hombre modelo (1).jpg" alt="Producto 1">
             <div class="card-content">
                 <h3>Producto 1</h3>
                 <p>Descripción del Producto 1. Conjunto masculino que combina audacia y elegancia. <br> Polera verde militar y pantalón negro con tirantes. <br> Un estilo único para destacar con confianza.</p>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="static/img/Hombre modelo (2).jpg" alt="Producto 2">
+            <img src="/img/Hombre modelo (2).jpg" alt="Producto 2">
             <div class="card-content">
                 <h3>Producto 2</h3>
                 <p>Descripción del Producto 2. Un look masculino clásico y elegante: polera blanca, saco de vestir en color crema y pantalón café. <br> Perfecto para destacar con estilo en cualquier ocasión.</p>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="static/img/Mujer modelo (1).jpg" alt="Producto 3">
+            <img src="/img/Mujer modelo (1).jpg" alt="Producto 3">
             <div class="card-content">
                 <h3>Producto 3</h3>
                 <p>Descripción del Producto 3. <p>Un conjunto femenino que irradia elegancia y comodidad: polerón gris perla, saco de vestir en gris oscuro y pantalón blanco. <br> La combinación perfecta para un estilo sofisticado y moderno.</p>
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="static/img/Mujer Perchas.jpg" alt="Producto 3">
+            <img src="/img/Mujer Perchas.jpg" alt="Producto 3">
             <div class="card-content">
                 <h3>Producto 4</h3>
                 <p>Descripción del Producto 4. Descubre nuestra colección de sweaters de lana fina para mujer. <br> Diseños versátiles y acogedores que te mantendrán abrigada y con estilo durante toda la temporada. <br> ¡Encuentra el perfecto para ti!</p>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="static/img/Hombre Jeans.jpg" alt="Producto 3">
+            <img src="/img/Hombre Jeans.jpg" alt="Producto 3">
             <div class="card-content">
                 <h3>Producto 5</h3>
                 <p>Descripción del Producto 5. >Explora nuestra amplia selección de jeans de calidad para todos los estilos y ocasiones. <br> Desde los clásicos ajustados hasta los modernos de corte boyfriend, tenemos el par perfecto para cada gusto y figura.</p>
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="card">
-            <img src="static/img/Mujer modelo (2).jpg" alt="Producto 3">
+            <img src="/img/Mujer modelo (2).jpg" alt="Producto 3">
             <div class="card-content">
                 <h3>Producto 6</h3>
                 <p>Descripción del Producto 6. Un conjunto fresco y versátil para la mujer moderna: musculosa blanca, short de lino en color mostaza y camisa blanca. <br> Ideal para días cálidos y ocasiones casuales.</p>
@@ -99,7 +99,7 @@
        
         
     </main>
-    <script src="static/js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
