--- a/PYTHON-FRONT/templates/contacto.html
+++ b/PYTHON-FRONT/templates/contacto.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocco Couture</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
-    <link rel="shortcut icon" href="./static/img/LogoRC.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="shortcut icon" href="/img/LogoRC.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <img src="\static\img\logoRC.png" alt="Logo" id="logo">
+        <img src="/img/LogoRC.png" alt="Logo" id="logo">
         <h1>Rocco Couture</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="catalogo.html">Catálogo</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html" class="selected">Contacto</a></li>
@@ -61,7 +61,7 @@
                 </div>
                 <!-- una imagen -->
                  <div class="form-group" style="text-align: center;">
-                    <div><input type="image" src="./static/img/Enviar.jpeg" alt="limpio" width="100" height="60" a>  </div>
+                    <div><input type="image" src="/img/Enviar.jpeg" alt="limpio" width="100" height="60" a>  </div>
                     
                   
                 <!--Un Botón -->
@@ -70,7 +70,7 @@
             </form>
         </section>
     </main>
-    <script src="static/js/validation.js"></script>
+    <script src="/js/validation.js"></script>
 </body>
 
 </html>
