--- a/PYTHON-FRONT/templates/editar_producto.html
+++ b/PYTHON-FRONT/templates/editar_producto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/ingresar_producto.css">
+    <link rel="stylesheet" href="/css/ingresar_producto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Editar Producto</title>
     
@@ -54,8 +54,8 @@
     </main>
 
     <footer></footer>
-    <script src="static/js/editar_producto.js"></script>
-    <script src="static/js/datos_editar.js"></script>
+    <script src="/js/editar_producto.js"></script>
+    <script src="/js/datos_editar.js"></script>
  
 </body>
 
