--- a/PYTHON-FRONT/templates/tabla_productos.html
+++ b/PYTHON-FRONT/templates/tabla_productos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link
       rel="shortcut icon"
-      href="/static/img/LogoRC.ico"
+      href="/img/LogoRC.ico"
       type="image/x-icon"
     />
     <link
@@ -63,12 +63,12 @@
               </tr>
             </tbody>
           </table>
-
+          <p> . </p>
       </div>
     </main>
 
     <footer>
-      <p>&copy; 2024 Rocco Couture. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Rocco Couture. Todos los derechos reservados.</p>
     </footer>
 
     <script src="/js/scripts.js"></script>
