--- a/PYTHON-FRONT/templates/catalogodyn.html
+++ b/PYTHON-FRONT/templates/catalogodyn.html
@@ -24,21 +24,28 @@
     </header>
 
     <main>
+        <div  id="app">
+            <div class="add-product-button">
+               <!-- <button onclick="location.href='agregar_producto.html'">
+                <i class="fas fa-plus"></i> Agregar Producto -->
+              </button>  
+            </div> 
+
     <div v-for="producto in productos">
         <div class="card">
-            <img src="producto.imagen" alt="Producto 1" class="product-image">
+            <img :src="producto.imagen" alt="" class="product-image">
             <div class="card-content">
-                <h3>Producto 1</h3>
+                <h3 data-label="ID">Artículo N°{{producto.id}}</h3>
                 <p data-label="Descripción">{{producto.descripcion}}</p>
-                <a class="button" onclick="mostrarDetalles(event, 'detalle1')">Ver Detalles</a>
+                <a class="button" onclick="mostrarDetalles(event, 'detalle1' )">Ver Detalles</a>
                 <div id="detalle1" class="details-message">
-                    <p><strong>Precio:</strong> $49.99</p>
+                    <p><strong>Precio: $</strong>{{producto.precio}}</p>
                     <p><strong>Talles:</strong> S, M, L, XL</p>
                 </div>
             </div>
         </div>
     </div>
-        <div class="card">
+    <!--   <div class="card">
             <img src="/img/Hombre modelo (2).jpg" alt="Producto 2">
             <div class="card-content">
                 <h3>Producto 2</h3>
@@ -49,61 +56,20 @@
                         <p><strong>Talles:</strong> S, M, L, XL</p>
                     </div>
             </div>
-        </div>
-        <div class="card">
-            <img src="/img/Mujer modelo (1).jpg" alt="Producto 3">
-            <div class="card-content">
-                <h3>Producto 3</h3>
-                <p>Descripción del Producto 3. <p>Un conjunto femenino que irradia elegancia y comodidad: polerón gris perla, saco de vestir en gris oscuro y pantalón blanco. <br> La combinación perfecta para un estilo sofisticado y moderno.</p>
-                <a class="button" onclick="mostrarDetalles(event, 'detalle3')">Ver Detalles</a>
-                <div id="detalle3" class="details-message">
-                    <p><strong>Precio:</strong> $69.99</p>
-                    <p><strong>Talles:</strong> S, M, L, XL</p>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/img/Mujer Perchas.jpg" alt="Producto 3">
-            <div class="card-content">
-                <h3>Producto 4</h3>
-                <p>Descripción del Producto 4. Descubre nuestra colección de sweaters de lana fina para mujer. <br> Diseños versátiles y acogedores que te mantendrán abrigada y con estilo durante toda la temporada. <br> ¡Encuentra el perfecto para ti!</p>
-                <a class="button" onclick="mostrarDetalles(event, 'detalle4')">Ver Detalles</a>
-                <div id="detalle4" class="details-message">
-                    <p><strong>Precio:</strong> $169.99</p>
-                    <p><strong>Talles:</strong> S, M, L, XL</p>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="https://codo24169g5.netlify.app/img/modelo03.jpg" alt="Producto 3">
-            <div class="card-content">
-                <h3>Producto 5</h3>
-                <p>Descripción del Producto 5. >Explora nuestra amplia selección de jeans de calidad para todos los estilos y ocasiones. <br> Desde los clásicos ajustados hasta los modernos de corte boyfriend, tenemos el par perfecto para cada gusto y figura.</p>
-                <a class="button" onclick="mostrarDetalles(event, 'detalle5')">Ver Detalles</a>
-                <div id="detalle5" class="details-message">
-                    <p><strong>Precio:</strong> $175.99</p>
-                    <p><strong>Talles:</strong> S, M, L, XL</p>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <img src="/img/Mujer modelo (2).jpg" alt="Producto 3">
-            <div class="card-content">
-                <h3>Producto 6</h3>
-                <p>Descripción del Producto 6. Un conjunto fresco y versátil para la mujer moderna: musculosa blanca, short de lino en color mostaza y camisa blanca. <br> Ideal para días cálidos y ocasiones casuales.</p>
-                <a class="button" onclick="mostrarDetalles(event, 'detalle6')">Ver Detalles</a>
-                <div id="detalle6" class="details-message">
-                    <p><strong>Precio:</strong> $244.99</p>
-                    <p><strong>Talles:</strong> S, M, L, XL</p>
-                </div>
-            </div>
-        </div>
-       
+        </div> -->
         
+
+         
     </main>
+    
     <script src="/js/scripts.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="/js/tabla_producto.js"></script>
 </body>
-
+<footer>
+    <table >
+        <a href="/templates/administrar_productos.html" class="botonRojo">Administrar Productos</a>  
+    </table>
+    
+</footer>
 </html>
