--- a/PYTHON-FRONT/templates/header.html
+++ b/PYTHON-FRONT/templates/header.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="selected">Inicio</a></li>
-                <li><a href="catalogo.html">Catálogo</a></li>
+                <li><a href="catalogodyn.html">Catálogo</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
