--- a/PYTHON-FRONT/templates/nosotros.html
+++ b/PYTHON-FRONT/templates/nosotros.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="catalogo.html">Catálogo</a></li>
+                <li><a href="catalogodyn.html">Catálogo</a></li>
                 <li><a href="nosotros.html"class="selected">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
