--- a/PYTHON-FRONT/templates/catalogodyn.html
+++ b/PYTHON-FRONT/templates/catalogodyn.html
@@ -37,7 +37,7 @@
             <div class="card-content">
                 <h3 data-label="ID">Artículo N°{{producto.id}}</h3>
                 <p data-label="Descripción">{{producto.descripcion}}</p>
-                <a class="button" onclick="mostrarDetalles(event, 'detalle1' )">Ver Detalles</a>
+                <!-- <a class="button" onclick="mostrarDetalles(event, 'detalle1' )">Ver Detalles</a> -->
                 <div id="detalle1" class="details-message">
                     <p><strong>Precio: $</strong>{{producto.precio}}</p>
                     <p><strong>Talles:</strong> S, M, L, XL</p>
