--- a/PYTHON-FRONT/templates/nosotros.html
+++ b/PYTHON-FRONT/templates/nosotros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocco Couture</title>
+    <title>Tienda de Vestir</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" href="/img/LogoRC.ico" type="image/x-icon">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="/img/LogoRC.png" alt="Logo" id="logo">
-        <h1>Rocco Couture</h1>
+        <h1>Tienda de Vestir</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
