--- a/PYTHON-FRONT/templates/tabla_productos.html
+++ b/PYTHON-FRONT/templates/tabla_productos.html
@@ -68,7 +68,7 @@
     </main>
 
     <footer>
-            <p>&copy; 2024 Rocco Couture. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Tienda de Vestir. Todos los derechos reservados.</p>
     </footer>
 
     <script src="/js/scripts.js"></script>
