--- a/PYTHON-FRONT/templates/administrar_productos.html
+++ b/PYTHON-FRONT/templates/administrar_productos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrar Productos - Rocco Couture</title>
+    <title>Administrar Productos - Tienda de Vestir</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="shortcut icon" href="/img/LogoRC.ico" type="image/x-icon">
 </head>
