--- a/PYTHON-FRONT/templates/catalogodyn.html
+++ b/PYTHON-FRONT/templates/catalogodyn.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <img src="/img/logoRC.png" alt="Logo" id="logo">
-        <h1>Rocco Couture</h1>
+        <h1>Tienda de Vestir</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
