--- a/PYTHON-FRONT/templates/header.html
+++ b/PYTHON-FRONT/templates/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocco Couture</title>
+    <title>Tienda de Vestir</title>
     <link rel="stylesheet" href="./static/css/styles.css">
     <link rel="shortcut icon" href="./static/img/LogoRC.ico" type="image/x-icon">
 </head>
