--- a/PYTHON-FRONT/css/styles.css
+++ b/PYTHON-FRONT/css/styles.css
@@ -207,6 +207,7 @@ footer2 {
 
 .card-content {
     padding: 20px;
+    text-align: center;
 }
 
 .card-content h3 {
@@ -216,7 +217,7 @@ footer2 {
 }
 
 .card-content p {
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     color: #666;
 }
 
